# python-data-driven-decisions

./: .gitignore  Asia analysis.ipynb  CopyMaria Data-integration.ipynb  Data extraction.ipynb  Data visualization master.ipynb  Data-integration.ipynb  DataFlow Datatraining.drawio  DataFlow TheBigThree.drawio  Data_Predictions.ipynb  Data_clustering_countries.ipynb  Data_clustering_indicators.ipynb  Data_filling_NaN.ipynb  Data_filling_NaN_values.ipynb  Data_integration.ipynb  Data_load.ipynb  Data_normalization.ipynb  Data_normalization_outliers.ipynb  Data_outliers.ipynb  Data_outliers_IQR_Zscore.ipynb  Data_sequencies_New.ipynb  Demo overall graphs.ipynb  FAO attempt.ipynb  GraphicsNotebook.ipynb  Latam visualization master.ipynb  Notebook-Cluster.ipynb  Notebook-Time-Shifting.ipynb  Notebook-TryCluster.ipynb  Notebook_Bronze.ipynb  Notebook_Cluster.ipynb  Notebook_Clustering.ipynb  Notebook_Dashboard.ipynb  Notebook_Dashboard_Silviu.ipynb  Notebook_Golden.ipynb  Notebook_Graphics.ipynb  Notebook_Machine_Learning.ipynb  Notebook_Read.ipynb  Notebook_Silver.ipynb  Notebook_Time_Series.ipynb  Notebook_Time_Series_Silviu.ipynb  OutputCluster.csv  (+29 more)
Data/: dfindicators - Copy.xlsx
Databases/: DataBank-gender-equality-rating-CPIA.csv  DataBank-prevalenceUndernourishment-perce.csv  FAOSTAT_AgricultureOrientationIndex-CreditToAgri-Forestry-Fishing.csv  FAOSTAT_GDP.csv  FAOSTAT_agriculture-share-gdp.csv  FAOSTAT_employment-rural.csv  FAOSTAT_share-employment-agricultureForestry-Fishing.csv  FAOSTAT_total agriculture.csv  WID_Data_Bottom 50% wealth.csv  (+29 more)
Output/: 1.csv  2.csv  (+21 more)
(+236 files in other folders)
