[tool.poetry]
name = "python-data-driven"
version = "0.1.0"
description = ""
authors = ["Victor <victor.perez-lopez-external@capgemini.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
pandas = "^1.4.2"
nbdime = "^3.1.1"
requests = "^2.28.0"
numpy = "^1.23.0"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
seaborn = "^0.11.2"
sklearn = "^0.0"
plotly = "^5.9.0"
coverage = "^6.4.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"